<resources>
    <string name="app_name">StockManagerProto3</string>
    <string name="stockInfo1">DETAIL FRAGMENT SUCCESS</string>
    <string name="welcome">Welcome to StockManager!</string>
    <string name="info1">-> Enter the ticker in the search box below to view a \n\t\tstock.</string>
    <string name="info2">-> Click the eye icon to navigate to your curated \n\t\twatchlist.</string>
    <string name="note">IMPORTANT NOTE:\nForex/Crypto look up not supported at this time.\nThis app is limited by 500 requests per day.\nPlease limit requests to 5 per minute\n(A request with a typo counts as a request!)</string>
    <string name="searchInput">Search:</string>
    <string name="ticker">Enter ticker symbol name</string>
    <string name="find">Find</string>
    <string name="date">Last Accessed: %s</string>
    <string name="range">Range:</string>
    <string name="daily">Daily</string>
    <string name="fiveDays">Weekly</string>
    <string name="threeMonths">Monthly</string>
    <string name="max">Max</string>
    <string name="highPrice">High price:  	$%s</string>
    <string name="lowPrice">Low price:   	$%s</string>
    <string name="openPrice">Open price: 	$%s</string>
    <string name="closePrice">Close price:	$%s</string>
    <string name="close_price_s">Close Price: %s</string>
</resources>